# streamlit_monaco_yaml

./: .flake8  .gitignore  LICENSE.md  README.md  build.sh  pyproject.toml
.github/workflows/: main.yaml
frontend/: .prettierrc  package.json  pnpm-lock.yaml  webpack.config.js
frontend/public/: index.html
frontend/src/: Monaco.tsx  index.tsx
streamlit_monaco_yaml/: __init__.py
