[tool.poetry]
authors = ["Skalar Systems <contact@skalarsystems.com>"]
description = "Monaco editor component for Streamlit for editing YAML files."
name = "streamlit-monaco-yaml"
version = "0.2.0"
license = "MIT"
include = [
  "README.md",
  "streamlit_monaco_yaml/frontend-build/*",
  "streamlit_monaco_yaml/*",
]
homepage = "https://github.com/semadox/streamlit_monaco_yaml"
repository = "https://github.com/semadox/streamlit_monaco_yaml"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
ruff = "^0.0.287"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
